# statelix

./: .dockerignore  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  NOTICE.txt  README.md  Statelix.desktop  Statelix.spec  bench_math  benchmark_psm.py  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_direct.txt  debug_direct.py  debug_log.py  debug_math  debug_tail.py  demo.py  demo_dynamic_panel.py  demo_econometrics.py  docker-compose.yml  find_pyd.py  inspect_data.py  launcher.sh  pyproject.toml  requirements.txt  run_benchmarks.py  setup.py  test_garch_compile.cpp  test_poly  test_solver.cpp  test_tda  verify_causal_inquiry.py  verify_inquiry.py  verify_psm_refactor.py
benchmark/: battle_royale.py  battle_royale_r.py  bench_eigen_vs_zigen.cpp  jax_vs_cpp.py  run_suite.py  verify_bayes.py  verify_inquiry_integration.py  verify_linear_cpp.py  verify_new_models.py  verify_psm_refactor.py  verify_timeseries.py
benchmark/r_scripts/: benchmark_gmm.R  benchmark_ols.R  benchmark_panel.R  benchmark_psm.R
benchmarks/: RESULTS.md  battle_royale.py  benchmark_gmm.py  benchmark_hmc.py  benchmark_panel.py  benchmark_psm.py  benchmark_spatial.py  psm_benchmark.py  psm_fullsuite_benchmark.py  psm_fullsuite_results.csv  psm_results.csv  run_benchmarks.py  test_garch_zigen.py  test_linear_zigen.py  test_logistic_zigen.py  test_map_zigen.py  utils.py
build_exe/Statelix/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-Statelix.txt  xref-Statelix.html
docs/: ADVANCED.md  API.md  DOCKER_VERIFICATION.md  INSTALLATION.md  INTEGRATION_REPORT.md  getting_started.md
examples/: demo_panel.py  demo_ssdse.py  inquiry_causal_demo.py
packaging/: Statelix.spec  build_exe.py  compile_installer.bat  setup.iss
poc/: causal_corrector_poc.py  causal_graph_poc.py  causal_robust_poc.py  efficiency_advanced_poc.py  efficiency_boost_poc.py
src/: main.cpp
src/bayes/: bayesian_regression.h  hmc.h  map.h  mcmc.h  native_objectives.h  vi.h
src/bindings/: python_bindings.cpp  python_bindings_accelerator.cpp  python_bindings_backup.cpp  python_bindings_backup_2.cpp  python_bindings_bayes.cpp  python_bindings_causal.cpp  python_bindings_clean.cpp  python_bindings_graph.cpp  python_bindings_hmc.cpp  python_bindings_linear.cpp  python_bindings_mathuniverse.cpp  python_bindings_panel.cpp  python_bindings_psm.cpp  python_bindings_spatial.cpp  python_bindings_timeseries.cpp
src/causal/: did.h  gmm.h  iv.h  psm.h  rdd.h  synthetic_control.h
src/cluster/: kmeans.cpp  kmeans.h
src/cuda/: accelerator.cu  accelerator.h
src/glm/: discrete_choice.h  glm_base.h  glm_legacy.h  glm_models.cpp  glm_models.h  glm_solver.h  zero_inflated.h
src/graph/: louvain.h  pagerank.h
src/linalg/: sparse_core.cpp  sparse_core.h
src/linear_model/: diagnotics.cpp  elastic_net.cpp  elastic_net.h  gamma_regression.cpp  gamma_regression.h  glm_poissom_nb.cpp  glm_poisson_nb.cpp  lasso.cpp  logistic.cpp  logistic.h  negative_binomial.cpp  negative_binomial.h  ols.cpp  ols.h  pca.cpp  penalty.cpp  poisson.cpp  poisson_full.h  ridge.h  ridge_cv.cpp  solver.cpp  solver.h
src/ml/: fm.cpp  fm.h  gbdt.cpp  gbdt.h
src/optimization/: branch_bound.h  lbfgs.cpp  lbfgs.h  objective.cpp  objective.h  optimization.h  penalizer.h  zigen_blas.h  zigen_optimizer.h
src/panel/: dynamic_panel.h  panel.h
src/quant/: quantized.h
src/search/: hnsw.h  kdtree.cpp  kdtree.h
src/signal/: wavelet.cpp  wavelet.h
src/spatial/: icp.cpp  icp.h  spatial.h
src/stats/: anova.cpp  anova.h  math_utils.h  poly_utils.h  quantile_regression.h  resampling.h  robust.h  tda.h  tests.h
src/survival/: cox.cpp  cox.h
src/test/: numerical_tests.h
src/time_series/: ar_model.cpp  ar_model.h  cointegration.h  cpd.cpp  cpd.h  dtw.cpp  dtw.h  garch.h  kalman.cpp  kalman.h  var.h
statelix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
statelix_pkg/: __init__.py
statelix_pkg/causal/: __init__.py  core.py
statelix_pkg/inquiry/: __init__.py  adapters.py  narrative.py
statelix_py/: __init__.py  app.py  facade.py  topology_bayes.py
statelix_py/causal/: did.py  iv.py  rdd.py
statelix_py/core/: __init__.py  assumption_path.py  assumption_tube.py  claim_budget.py  claim_compiler.py  cliff_learner.py  collapse_simulator.py  cpp_binding.py  data_manager.py  feature_synthesizer.py  governance_report.py  honest_sentence.py  one_way_door.py  project_manager.py  responsibility_sink.py  reviewer_attack.py  unified_space.py
statelix_py/diagnostics/: analyst_engine.py  causal_manifold.py  cit_detector.py  critic.py  history.py  mci.py  presets.py  translator.py
statelix_py/gui/: expert_window.py  i18n.py  main_window.py  styles.py
statelix_py/inquiry/: adapters.py  compare.py  narrative.py
temp_test_data/: test.csv  test.dta  test.feather  test.h5  test.json  test.parquet  test.tsv  test.xlsx
tests/: bench_hnsw.py  benchmark_mathuniverse.py  debug_hmc.py  inspect_statelix.py  test_analyst_engine.py  test_assumption_path.py  test_assumption_tube.py  test_causal_manifold.py  test_cit_detector.py  test_claim_compiler.py  test_collapse_simulator.py  test_diagnostics.py  test_file_loading.py  test_governance.py  test_governance_api.py  test_gui_governance.py  test_hmc_consistency.py  test_integrated_diagnostics.py  test_keirin_topology.py  test_mathuniverse_bindings.py  test_models.py  test_quickstart.py  test_responsibility.py  test_risan_repair.py  test_ryoshi_causal.py  test_shinen_invariants.py  test_topology_bayes.py  test_unified_space.py  verify_imports_full.py  verify_manual.py  verify_student_mode.py
tools/: build.ps1  build_hmc.sh  build_panel.sh  build_psm.sh  compile_bindings.sh  compile_bindings_only.sh  compile_test.sh  health_check.sh  manual_link.sh  run_benchmark_hmc.sh  run_benchmark_panel.sh  run_benchmark_psm.sh  test_package.sh  verify_bindings.ps1  verify_docker.ps1  verify_release.py
venv_bench/: pyvenv.cfg
(+82 files in other folders)
