[build-system]
requires = ["setuptools>=65.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statelix"
version = "2.2.0"
description = "高性能統計解析ソフトウェア - GUI + Python SDK + C++ Core"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Statelix Development Team"}
]
keywords = ["statistics", "analysis", "ols", "glm", "survival", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "PyQt6>=6.4.0",
    "statsmodels>=0.13.0",
    "lifelines>=0.27.0",
    "wasmtime>=14.0.0",
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "hypothesis>=6.0.0",
]

build = [
    "cmake>=3.18",
    "ninja>=1.10.0",
]

[project.scripts]
statelix = "statelix_py.app:main"
statelix-migrate = "statelix_py.utils.migration:main"

[project.urls]
Homepage = "https://github.com/statelix/statelix"
Documentation = "https://statelix.readthedocs.io"
Repository = "https://github.com/statelix/statelix"
Issues = "https://github.com/statelix/statelix/issues"

[tool.setuptools]
packages = ["statelix_py"]

[tool.setuptools.package-data]
statelix_py = ["*.so", "*.pyd", "*.dll"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=statelix_py --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["statelix_py"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
